# Harvest-Hub

./: README.md
.github/workflows/: main.yml  mirror-commits.yml  pr-title-check.yml  strict-only-dev-on-main.yml
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/public/models/: Garden Pin v7.mtl
frontend/public/scripts/: daisy.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: GeneralView.tsx  HubView.tsx  IntroView.tsx  LastView.tsx  NodeView.tsx  Pages.tsx  QuadrillageView.tsx
frontend/src/app/styles/: Pages.module.css
hardware/: basic-composant-schema.excalidraw
hardware/sonde/harvesthub-stm32/: Cargo.original.bak.toml  Cargo.toml  README.md  memory.x
hardware/sonde/harvesthub-stm32/.cargo/: config.toml
hardware/sonde/harvesthub-stm32/src/: main.rs  sensor.rs
hardware/sonde/harvesthub-stm32/tests/: convert.rs
hardware/sonde/libraries/: RSP-122811-01.lbr  STM32WB55CEU6.lbr  STM32WB55CGU6.lbr
ressources/3D/demo-hub/: hub mini bottom.stl  hub mini top.stl
ressources/3D/demo-sonde/: head-base.stl  head-lid.stl  stem.stl
web/frontend/: Dockerfile
web/frontend/public/models/: Harvest Hub v5.mtl
web/frontend/src/app/: layout.tsx
web/site_vitrine/: .gitignore  package-lock.json  tailwind.config.ts
web/site_vitrine/src/app/: page.tsx  (+1 more)
web/time_scale_db/: Dockerfile  buf.gen.docs.yaml  buf.yaml  docker-compose.yml  go.mod  go.sum  index.js  init.sql  main.go  package.json
web/time_scale_db/docs/: docs.go  swagger.json  swagger.yaml
web/time_scale_db/server/: main.go
(+7 files in other folders)
